fix sidebar icons alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -32,11 +32,12 @@ body{
 .cta-bar button{
     all: unset;
     border: 1px solid white;
-    border-radius: 20px;
-    padding: .2rem 2.2rem;
+    border-radius: 25px;
+    padding: .3rem 2.2rem;
     margin: auto .5rem;
     height: 32px;
     color: white;
+    background-color: #080b12;
 }
 
 header{
@@ -44,12 +45,33 @@ header{
 }
 
 .sidebar{
+    display: flex;
     width: 50px;
     height: 100vh;
     background-color: black;
-    justify-content: flex-start;
     flex-direction: column;
+    align-items: center;
     z-index: 3;
+    flex-wrap: wrap;
+}
+
+.sidebar a{
+    /* padding: .3rem .3rem; */
+    display: flex;
+    justify-content: center;
+    width: 50px;
+    font-size: 1.5rem;
+    color: #d2d2d2;
+    margin: 0 auto;
+}
+
+.sidebar i{
+    padding: .3rem .3rem;
+}
+
+#spotify-btn{
+    font-size: 2.2rem;
+    margin-bottom: .3rem;
 }
 
 main{
